added title and is

--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -1,6 +1,10 @@
 <h1>Your bookmarks:</h1>
 <ul>
-  <% @BM.each do |website| %>
-    <li><%= website %></li>
+  <% @bookmarks.each do |bookmark| %>
+    <li>
+    <a href="<%= bookmark.url %>">
+      <%= bookmark.title %>
+      </a>
+    </li>
   <% end %>
 </ul>
